# generate-qr-code-telegram-bot

./: .env_example  main.py  pyproject.toml  readme.md  settings.py  start.sh
generate_qr_code_telegram_bot/qr_code/: core.py
generate_qr_code_telegram_bot/telegram_bot/: core.py  handlers.py
